Make the selector position relative to the window size and make sure it is on top and fully visible.

--- a/templates/default/public/styles.css
+++ b/templates/default/public/styles.css
@@ -132,6 +132,7 @@ em {
   border-radius: 10px;
 	border: 10px solid #222;
 	overflow: hidden;
+  z-index: 3;
 }
 #selector table {
 	border-collapse: collapse;
